Fixing typo in hdc3022 package name

--- a/package/hdc3022_app/Config.in
+++ b/package/hdc3022_app/Config.in
@@ -1,4 +1,4 @@
-config BR2_PACKAGE_HDC3022_APPP
+config BR2_PACKAGE_HDC3022_APP
 	bool "HDC3022_APP"
 	help
-	 Application layer driver for HD3022 temperature and humidty driver
+	 Application layer driver for HD3022 temperature and humidity driver
